--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* @import "@fontsource/pacifico"; */
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -85,3 +87,4 @@
     height: 100%;
   }
 }
+
